// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components CTA Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 20,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 28,
      "lineHeight": 42,
    }
  }
  style={
    [
      {
        "fontSize": 28,
        "lineHeight": 42,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 28,
      "lineHeight": 42,
    }
  }
  style={
    [
      {
        "fontSize": 28,
        "lineHeight": 42,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 26,
      "lineHeight": 39,
    }
  }
  style={
    [
      {
        "fontSize": 26,
        "lineHeight": 39,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  color="bluegreyLight"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  color="bluegrey"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 8`] = `
<Text
  color="bluegreyLight"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 9`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  color="bluegrey"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  color="blue"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 5`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 6`] = `
<Text
  color="bluegrey"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 7`] = `
<Text
  color="blue"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H6 Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 20,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#C02927",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  color="blueIO-500"
  defaultColor="blueIO-500"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
      "textDecorationLine": "underline",
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
        "textDecorationLine": "underline",
      },
      {
        "color": "#0B3EE3",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components Monospace Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="RobotoMono"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Roboto Mono",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;
